--- a/site/index.html
+++ b/site/index.html
@@ -3,6 +3,6 @@
         <title>githud page</title> 
     </head>
     <body>
-       <h1>Hello coursera</h1>
+       <h1>Hello coursera! hello </h1>
     </body>
 </html>
