--- a/module_2_sol/index.html
+++ b/module_2_sol/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Module 2 Solution</title>
-        <link rel="stylesheet" type="text/css" href="stylesheet.css">
+        <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     </head>
     <body>
         <h1>Our Menu</h1>
