--- a/module_4_sol/index.html
+++ b/module_4_sol/index.html
@@ -2,7 +2,10 @@
     <head>
         <title>MOdule 4 Assgiment</title>
         <meta charset="UTF-8">
+        <script src="SpeakHello.js"></script>
+        <script src="SpeakGoodBye.js"></script>
         <script src="scrpit.js"></script>
+
     </head>
     <body>
         <h1>Module 4 Solution</h1>
